@startuml
'https://plantuml.com/class-diagram

class todoLists{
    main()
    start()
}
class todoListsController{
String makeTodoList()
String addListDataBase()
void addTodoList()
void removeTodoList()
}
class todoListsMaker{
String makeTitle()
int getCapacity()
void addItem()

}
class item{
String getItem()
void setItem()
int itemNumber
getItem()
void setItem()
String description()
String date()
String dueDate()
int getItemNumber()
void setItemNumber()
}
class itemCompletion{
boolean itemStatus
checkItemStatus()
}
class capacity{
int numLists
boolean containsItems()
int getCapacity()
void setCapacity()
}
class editItemController{
String []itemArray
void saveArray()
}
class title{
String title
String setListTitle
String getTitle
String setTitle(title)
void getTitle(title)
}
class Date{
String date;
DateTimeFormatter d
LocalTimeNow current
ofPattern()
now()
format()
String makeCurrentDate()
}
class todoListDataBase{
import java.util.*;
final int MaxLists
int numOfTodoLists
boolean overLimit
boolean status()
String[] todoLists
String[] itemList
boolean checkListStatus()
}
class editTodoList{
String newItem
String editTitle
String editDueDate()
String editTitle()
void addItemToList(newItem)
void editDescription(item)
}
class displayInformation{
String List
String[] items()
String incompleteItem
printList()
printExistingItems()
printIncompleteItem()
checkItemCompleted()
}
class saveStorage{
void save()
void checkLoadToDoList()
void load()
}
class itemNumber{
boolean check
int itemNumber
boolean checkItem()
}
class itemDescription{
String itemDescription
String getItemDescription(itemDescription)
String setItemDescription(itemDescription)
}
todoLists - todoListsController
todoListsController <|-- todoListsMaker
javafx.todoLists <|-- todoLists
todoListsMaker <|-- item
todoListsMaker <|-- capacity
todoListsMaker <|-- title
item <|-- Date
item <|-- itemNumber
item <-- itemDescription
todoListsController <|-- todoListDataBase
todoListDataBase <|-- editTodoList
todoListDataBase <|-- displayInformation
displayInformation <|-- itemCompletion
todoListDataBase <|-- saveStorage
todoListsController <|-- editItemController
@enduml